--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.2.0-alpha06'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+//    butter knife
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
 }
