--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
         package="com.example.howtimeflies">
 
     <application
-            android:name=".MyApplication"
+            android:name=".activity.MyApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -13,12 +13,13 @@
             android:theme="@style/AppTheme"
             tools:ignore="ExtraText">
         <activity
-                android:name=".LoginActivity"
+                android:name=".activity.LoginActivity"
                 android:exported="true" />
         <activity
-                android:name=".RegisterActivity"
+                android:name=".activity.RegisterActivity"
                 android:exported="true" />
-        <activity android:name=".HomeActivity">
+        <activity android:name=".activity.HomeActivity" />
+        <activity android:name=".activity.ShowTimeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
