--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 android:name=".activity.RegisterActivity"
                 android:exported="true" />
         <activity android:name=".activity.HomeActivity" />
-        <activity android:name=".activity.TestActivity">
+        <activity android:name=".activity.ShowTimeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
