--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="com.example.howtimeflies">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.howtimeflies">
 
     <application
-            android:name=".activity.MyApplication"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            tools:ignore="ExtraText">
-        <activity android:name=".activity.SimilarPersonActivity"></activity>
+        android:name=".activity.MyApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="ExtraText">
         <activity
-                android:name=".activity.LoginActivity"
-                android:exported="true" />
+            android:name=".activity.BottomNavAct"
+            android:label="@string/title_activity_bottom_nav"></activity>
+        <activity android:name=".activity.SimilarPersonActivity" />
         <activity
-                android:name=".activity.RegisterActivity"
-                android:exported="true" />
+            android:name=".activity.LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:exported="true" />
         <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.ShowTimeActivity">
             <intent-filter>
