--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
             tools:ignore="ProtectedPermissions" />
 
     <application
-            android:name=".activity.MyApplication"
+            android:name=".MyApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -19,7 +19,7 @@
             android:theme="@style/AppTheme"
             tools:ignore="ExtraText">
         <activity
-                android:name=".activity.BottomNavAct"
+                android:name=".activity.AppDetailActivity"
                 android:label="@string/title_activity_bottom_nav" />
         <activity android:name=".activity.SimilarPersonActivity" />
         <activity
