--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <application
             android:name=".MyApplication"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/app_icon2"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
@@ -26,8 +26,8 @@
         <activity
                 android:name=".activity.RegisterActivity"
                 android:exported="true" />
-        <activity android:name=".activity.HomeActivity" />
-        <activity android:name=".activity.ShowTimeActivity">
+        <activity android:name=".activity.ShowTimeActivity" />
+        <activity android:name=".activity.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
